# aws-lambda-typing

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-and-publish.yaml  publish.yaml  release-drafter.yml  test.yaml  update-dependencies.yaml
aws_lambda_typing/: __init__.py
aws_lambda_typing/context/: context.py
aws_lambda_typing/events/: api_gateway_proxy.py  cloud_watch_events.py  cloud_watch_logs.py  code_pipeline.py  config.py  dynamodb_stream.py  kinesis_firehose.py  kinesis_stream.py  mq.py  s3.py  s3_batch.py  ses.py  sns.py  sqs.py
aws_lambda_typing/responses/: __init__.py  api_gateway_proxy.py  s3_batch.py
src/aws_lambda_typing/common/: __init__.py  iam.py
src/aws_lambda_typing/context/: __init__.py  context.py
src/aws_lambda_typing/events/: __init__.py  alb.py  apache_kafka.py  api_gateway_authorizer.py  api_gateway_proxy.py  app_sync_resolver.py  cloud_formation_custom_resource.py  cloud_watch_events.py  cloud_watch_logs.py  cloudformation.py  code_commit.py  code_pipeline.py  cognito_custom_message.py  cognito_post_confirmation.py  config.py  dynamodb_stream.py  ec2_asg_custom_termination_policy.py  event_bridge.py  iot.py  kinesis_firehose.py  kinesis_stream.py  mq.py  msk.py  s3.py  s3_batch.py  secrets_manager.py  ses.py  sns.py  sqs.py  websocket.py
src/aws_lambda_typing/requests/: __init__.py  sns.py
src/aws_lambda_typing/responses/: __init__.py  alb.py  api_gateway_authorizer.py  api_gateway_proxy.py  dynamodb_batch.py  iot.py  kinesis_firehose.py  s3_batch.py
tests/common/: test_iam.py
tests/events/: test_alb.py  test_apache_kafka.py  test_api_gateway_authorizer.py  test_api_gateway_proxy.py  test_app_sync_resolver.py  test_cloud_formation_custom_resource.py  test_cloud_watch_events.py  test_cloud_watch_logs.py  test_cloudformation.py  test_code_commit.py  test_code_pipeline.py  test_cognito_custom_message.py  test_cognito_post_confirmation.py  test_config.py  test_dynamodb_stream.py  test_ec2_asg_custom_termination_policy.py  test_event_bridge.py  test_iot.py  test_kinesis_firehose.py  test_kinesis_stream.py  test_mq.py  test_msk.py  test_s3.py  test_s3_batch.py  test_secrets_manager.py  test_ses.py  test_sns.py  test_sqs.py  test_websocket.py
tests/requests/: test_sns.py
tests/responses/: api_gateway_proxy.py  test_alb.py  test_api_gateway_authorizer.py  test_api_gateway_proxy.py  test_dynamodb_batch.py  test_iot.py  test_kinesis_firehose.py  test_s3_batch.py
