[tool.poetry]
name = "aws-lambda-typing"
version = "2.15.0"
description = "A package that provides type hints for AWS Lambda event, context and response objects"
authors = ["Mousa Zeid Baker"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MousaZeidBaker/aws-lambda-typing"
repository = "https://github.com/MousaZeidBaker/aws-lambda-typing"
keywords=[
    'typing',
    'type hints',
    'aws',
    'lambda',
    'serverless',
    'development'
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]
packages = [
    { include = "aws_lambda_typing", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = { version = "^4.1.1", python = "<3.8" }

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = [
    {version = "^20.8b1", python = "<=3.6.2"},
    {version = "^22.3.0", python = ">3.6.2"},
]
flake8 = "^4.0.1"
flake8-black = "^0.2.5"
flake8-isort = "^4.1.1"
flake8-eradicate = "^1.2.1"
isort = { version = "^5.10.1", python = "^3.6.1" }
pre-commit = { version = "^2.17.0", python = "^3.6.1" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
line_length=80
profile = "black"
